--- a/170221.md
+++ b/170221.md
@@ -6,9 +6,9 @@
 
 
 
-[\[問題\] 放置隊幾個問題請教?](https://www.google.com/url?q=https%3A%2F%2Fdisp.cc%2Fb%2F654-9Ttv&sa=D&sntz=1&usg=AFQjCNH5MKlnxn-6xjlZXPvSBpTV2tJ7pw)
+[\[問題\] 放置隊幾個問題請教?](https://disp.cc/b/654-9Ttv)
 
-[\[問題\] 想問一下放置](https://www.google.com/url?q=https%3A%2F%2Fdisp.cc%2Fb%2F654-9QO6&sa=D&sntz=1&usg=AFQjCNFpN-EekjCTIjHNi0o2f9DaWGWQzg)
+[\[問題\] 想問一下放置](https://disp.cc/b/654-9QO6)
 
-[\[統計\] 關於放置Play這檔事](https://www.google.com/url?q=https%3A%2F%2Fdisp.cc%2Fb%2F654-9Ttw&sa=D&sntz=1&usg=AFQjCNGV5MY1JY6kp33XFM6zqxCgaB6BfA)
+[\[統計\] 關於放置Play這檔事](https://disp.cc/b/654-9Ttw)
 
