--- a/170221.md
+++ b/170221.md
@@ -1,6 +1,6 @@
 # 放置型隊伍
 
-防禦型的隊伍，通常是湊滿五張單屬防禦卡，或是將隊長技換成該屬性的\[提升技能發動機率\]
+防禦型的隊伍，通常是湊滿五張單屬滿技防禦卡，可將隊長技換成該屬性的\[提升技能發動機率\]
 
 防禦卡有分成 \(7秒 9秒 11秒\)持續效果，其中9秒的偶像目前只能在以前的活動取得
 
