--- a/170222.md
+++ b/170222.md
@@ -2,17 +2,18 @@
 
 2/17新增了特技
 
+++
+* オールラウンド=ALL round=??
+ * 發動中同時具有combo加分與恢復生命的雙重效果
+ * 若與其combo加分技能同時發動，則會計算加分比例較多的效果
+ * 若與其他恢復生命的技能同時發動，則計算恢復生命較多的效果
 
+++
+* コンセントレーション=concentration=專注  
+ * 發動時Perfect分數會提升，但是Great會斷Combo  
+ * 強判跟過載的優先度比這個技能高
 
-オールラウンド=ALL round=??
-發動中同時具有combo加分與恢復生命的雙重效果
-若與其combo加分技能同時發動，則會計算加分比例較多的效果
-若與其他恢復生命的技能同時發動，則計算恢復生命較多的效果
-
-コンセントレーション=concentration=專注
-發動時Perfect分數會提升，但是Great會斷Combo
-強判跟過載的優先度比這個技能高
-
+++
 
 [\[CGSS\] 新特技 コンセントレーション](http://disp.cc/b/654-9TdS)
 
