--- a/170221.md
+++ b/170221.md
@@ -1,6 +1,6 @@
 # 放置型隊伍
 
-#### 放置型的隊伍，是指湊滿五張單屬滿技防禦(ダメージガード/血盾)的隊伍，只要按前7秒的音符之後就可以放置等歌結束，故稱放置行隊伍
+#### 是指湊滿五張單屬滿技防禦(ダメージガード/血盾)的隊伍，只要按前7秒的音符之後就可以放置等歌結束，所以稱為放置型隊伍
 
 ##### 可將隊長技換成該屬性的\[提升技能發動機率\]
 
