--- a/170221.md
+++ b/170221.md
@@ -4,8 +4,6 @@
 
 ##### 可將隊長技換成該屬性的\[提升技能發動機率\]
 
-###### 防禦卡有分成 \(7秒 9秒 11秒\)持續效果，其中9秒的偶像目前只能在以前的活動取得
-
 
 
 
@@ -14,4 +12,17 @@
 [\[問題\] 想問一下放置](https://disp.cc/b/654-9QO6)
 
 [\[統計\] 關於放置Play這檔事](https://disp.cc/b/654-9Ttw)
+
+
+* 常駔卡池的血盾
+ * CUTE組
+   * [リトルプリンセス]福山舞＋
+   * [花園の春風]西園寺琴歌＋
+   * [シュガーリーボディ]榊原里美＋
+   * [華･美･雅]月宮雅＋
+ * COOL組
+   * [永遠のプリンセス]川島瑞樹＋
+   * [ブルーフロートパーティ]荒木比奈＋ 11
+   
+
 
