--- a/170221.md
+++ b/170221.md
@@ -17,25 +17,25 @@
 * 常駔卡池的血盾
  * CU/CUTE組
    * 7秒
-     * [花園の春風]西園寺琴歌＋
-     * [シュガーリーボディ]榊原里美＋
-     * [華･美･雅]月宮雅＋
+     * [花園の春風]西園寺琴歌
+     * [シュガーリーボディ]榊原里美
+     * [華･美･雅]月宮雅
    * 11秒
-     * [リトルプリンセス]福山舞＋   
+     * [リトルプリンセス]福山舞
  * CO/COOL組
    * 7秒
-     * [永遠のプリンセス]川島瑞樹＋ 7
+     * [永遠のプリンセス]川島瑞樹
    * 11秒
-     * [ブルーフロートパーティ]荒木比奈＋ 11
-     * [美貌の麗女]東郷あい＋ 11 
-     * [ランウェイのカリスマ]桐生つかさ＋ 11
+     * [ブルーフロートパーティ]荒木比奈
+     * [美貌の麗女]東郷あい
+     * [ランウェイのカリスマ]桐生つかさ
  * PA/PASSION組
    * 7秒
-     * [きぐるみもふもふ]市原仁奈＋
-     * [ディアンドルガール]北川真尋＋
+     * [きぐるみもふもふ]市原仁奈
+     * [ディアンドルガール]北川真尋
    * 11秒
-     * [サンフラワーイエロー]龍崎薫＋
-     * [みんなの太陽]上田鈴帆＋
+     * [サンフラワーイエロー]龍崎薫
+     * [みんなの太陽]上田鈴帆
  
   
    
