--- a/170221.md
+++ b/170221.md
@@ -1,6 +1,8 @@
 # 放置型隊伍
 
-#### 是指湊滿五張單屬滿技血盾(ダメージガード)的隊伍，只要按前7秒的音符之後就可以放置等歌結束，所以稱為放置型隊伍
+#### 是指湊滿五張血盾(ダメージガード)的隊伍，只要按前7秒的音符之後就可以放置等歌結束，所以稱為放置型隊伍
+
+##### 單屬滿技效果更好
 
 ##### 可將隊長技換成該屬性的\[提升技能發動機率\]
 
