--- a/170221.md
+++ b/170221.md
@@ -6,7 +6,7 @@
 
 ##### 可將隊長技換成該屬性的\[提升技能發動機率\]
 
-###### 9秒的血盾目前只能從以前的活動中取得
+###### 9秒的血盾目前只能從以前的活動報酬取得
 
 
 [\[問題\] 放置隊幾個問題請教?](https://disp.cc/b/654-9Ttv)
