--- a/170308.md
+++ b/170308.md
@@ -1,7 +1,9 @@
 + 烏列爾（Uriel）—領導天體星辰並守護冥界
-+ 拉斐爾（Raphael）—守護人類的靈魂
++ 拉斐爾（Raphael）—守護人類的靈魂/治癒的神跡
+  * 拉法葉
 + 拉貴爾（Raguel）—上帝的復仇者
 + 米迦勒（Michael）—以色列守護者
 + 沙利葉（Sariel）—靈魂的復仇者
 + 加百列（Gabriel）—掌管天堂的熾天使與智天使
+ * 加百利
 + 雷米爾（Remiel）—守護冥界靈魂
