--- a/170312.md
+++ b/170312.md
@@ -1,4 +1,4 @@
-# #
+# #欲界
 
 * 欲界六天 
  * 地居天
@@ -6,7 +6,7 @@
  * 空居天
    * 夜摩天、兜率天、化樂天、他化自在天
 
-# #
+# #色界
 * 色界天
   * 初禪天
     * 梵眾天、梵輔天、大梵天，居於大梵天的梵王為初禪天之主
@@ -17,6 +17,6 @@
   * 四禪天
     * 無雲天、福生天、廣果天、無想天、無煩天、無熱天、善見天、善現天、色究竟天
 
-# #
+# #無色界
 * 無色界天 
   * 空無邊處天、識無邊處天、無所有處天、非想非非想處天
