--- a/170312.md
+++ b/170312.md
@@ -1,8 +1,9 @@
 # #欲界
 
 * 欲界六天 
- * 地居天
-   * 四天王天、忉利天（三十三天）
+ * 地居天(地球空間)
+   * 四天王天
+   * 忉利天（共三十三天）(1天=人間100年)
  * 空居天
    * 夜摩天、兜率天、化樂天、他化自在天
 
