--- a/170312.md
+++ b/170312.md
@@ -5,7 +5,10 @@
    * 四天王天
    * 忉利天（共三十三天）(1天=人間100年)
  * 空居天
-   * 夜摩天、兜率天、化樂天、他化自在天
+   * 夜摩天
+   * 兜率天(1天=人間400年)
+   * 化樂天(1天=人間800年)
+   * 他化自在天
 
 # #色界
 * 色界天
