--- a/170312.md
+++ b/170312.md
@@ -2,10 +2,10 @@
 
 * 欲界六天 
  * 地居天(地球空間)
-   * 四天王天
+   * 四天王天（1日=人間50年）
    * 忉利天（共三十三天）(1天=人間100年)
  * 空居天
-   * 夜摩天
+   * 夜摩天（1日=人間200年）
    * 兜率天(1天=人間400年)
    * 化樂天(1天=人間800年)
    * 他化自在天(1天=人間1600年)
@@ -13,11 +13,17 @@
 # #色界
 * 色界天
   * 初禪天
-    * 梵眾天、梵輔天、大梵天，居於大梵天的梵王為初禪天之主
+    * 梵眾天(1/3劫（或20小劫）)
+    * 梵輔天(1/2劫（或40小劫）)
+    * 大梵天(1劫（或60小劫）)
   * 二禪天
-    * 少光天、無量光天、極光淨天(光音天)
+    * 少光天(2大劫)
+    * 無量光天(4大劫)
+    * 極光淨天(光音天)(8大劫)
   * 三禪天
-    * 少淨天、無量淨天、遍淨天
+    * 少淨天(16大劫)
+    * 無量淨天(32大劫)
+    * 遍淨天(64大劫)
   * 四禪天
     * 無雲天、福生天、廣果天、無想天、無煩天、無熱天、善見天、善現天、色究竟天
 
