--- a/170312.md
+++ b/170312.md
@@ -13,27 +13,27 @@
 # #色界
 * 色界天/色界18天
   * 初禪天
-    * 梵眾天(1/3劫（或20小劫）)
-    * 梵輔天(1/2劫（或40小劫）)
-    * 大梵天(1劫（或60小劫）)
+    * 梵眾天
+    * 梵輔天
+    * 大梵天
   * 二禪天
-    * 少光天(2大劫)
-    * 無量光天(4大劫)
-    * 極光淨天/光音天(8大劫)
+    * 少光天
+    * 無量光天
+    * 極光淨天/光音天
   * 三禪天
-    * 少淨天(16大劫)
-    * 無量淨天(32大劫)
-    * 遍淨天/遍照天(64大劫)
+    * 少淨天
+    * 無量淨天
+    * 遍淨天/遍照天
   * 四禪天
     * 無雲天
     * 福生天
-    * 無想有情天/無想天)(500大劫)
-    * 廣果天(500大劫)
-    * 無煩天(1000大劫)
-    * 無熱天(2000大劫)
-    * 善現天(4000大劫)
-    * 善見天(8000大劫)
-    * 色究竟天(16000大劫)
+    * 無想有情天/無想天
+    * 廣果天
+    * 無煩天
+    * 無熱天
+    * 善現天
+    * 善見天
+    * 色究竟天
     
 
 # #無色界
