--- a/170312.md
+++ b/170312.md
@@ -1,6 +1,6 @@
 # #欲界
 
-* 欲界六天 
+* 欲界天/欲界六天 
  * 地居天(地球空間)
    * 四天王天（1日=人間50年）
    * 忉利天（共三十三天）(1天=人間100年)
@@ -12,19 +12,19 @@
 
 # #色界
 * 色界天/色界18天
-  * 初禪天
-    * 梵眾天
-    * 梵輔天
-    * 大梵天
-  * 二禪天
+  * 初禪天/初禅三天
+    * 梵眾天(壽半劫)
+    * 梵輔天(壽一劫)
+    * 大梵天(壽一劫半)
+  * 二禪天/二禅三天
     * 少光天
     * 無量光天
     * 極光淨天/光音天
-  * 三禪天
+  * 三禪天/三禅三天
     * 少淨天
     * 無量淨天
     * 遍淨天/遍照天
-  * 四禪天
+  * 四禪天/四禅九天
     * 無雲天
     * 福生天
     * 無想有情天/無想天
