--- a/170221.md
+++ b/170221.md
@@ -1,4 +1,4 @@
-# 放置型隊伍
+# 放置型隊伍/盾隊
 
 #### 是指湊滿五張血盾(ダメージガード)的隊伍，只要按前7秒的音符之後就可以放置等歌結束，所以稱為放置型隊伍
 
@@ -6,7 +6,7 @@
 
 ##### 可將隊長技換成該屬性的\[提升技能發動機率\]
 
-###### 9秒的血盾目前只能從以前的活動報酬取得
+###### 9秒的血盾 比較難取得 多數只能從以前的活動報酬取得
 
 
 [\[問題\] 放置隊幾個問題請教?](https://disp.cc/b/654-9Ttv)
@@ -40,7 +40,19 @@
      * [みんなの太陽]上田鈴帆
  
   
-   
-   
-
-
+* 限定的血盾
+  * CU/CUTE組
+    * 9秒
+      * [小悪魔お嬢様]涼宮星花＋
+        * （2017年3月31日 22:00 ～ 4月9日 14:59）＜期間限定アイドル＞
+      * [プリティパティシエ]中野有香＋
+        * （1月31日 15:00 ～ 2月10日 14:59）
+  * CO/COOL組
+    * 9秒
+      *  [涼風のミンストレル]梅木音葉＋
+        * （2016/6/30 15:00 〜 7/10 14:59）
+      * [ハッピーブライダル]ナターリア＋
+        * （2016/5/31 15:00〜6/9 14:59）
+      *        [人波のスイマー]西島櫂＋
+        *        プラチナガシャ(2017/2/21 15:00〜)
+      
