--- a/170221.md
+++ b/170221.md
@@ -51,6 +51,7 @@
     * 9秒
       *  [涼風のミンストレル]梅木音葉＋
         * （2016/6/30 15:00 〜 7/10 14:59）
+  * PA/PASSION組
       * [ハッピーブライダル]ナターリア＋
         * （2016/5/31 15:00〜6/9 14:59）
       *        [人波のスイマー]西島櫂＋
