--- a/170221.md
+++ b/170221.md
@@ -16,44 +16,40 @@
 [\[統計\] 關於放置Play這檔事](https://disp.cc/b/654-9Ttw)
 
 
-* 常駔卡池的血盾
- * CU/CUTE組
-   * 7秒
-     * [花園の春風]西園寺琴歌
-     * [シュガーリーボディ]榊原里美
-     * [華･美･雅]月宮雅
-   * 11秒
-     * [リトルプリンセス]福山舞
- * CO/COOL組
-   * 7秒
-     * [永遠のプリンセス]川島瑞樹
-   * 11秒
-     * [ブルーフロートパーティ]荒木比奈
-     * [美貌の麗女]東郷あい
-     * [ランウェイのカリスマ]桐生つかさ
- * PA/PASSION組
-   * 7秒
-     * [きぐるみもふもふ]市原仁奈
-     * [ディアンドルガール]北川真尋
-   * 11秒
-     * [サンフラワーイエロー]龍崎薫
-     * [みんなの太陽]上田鈴帆
- 
-  
-* 限定的血盾
-  * CU/CUTE組
-    * 9秒
-      * [小悪魔お嬢様]涼宮星花＋
-        * （2017年3月31日 22:00 ～ 4月9日 14:59）＜期間限定アイドル＞
-      * [プリティパティシエ]中野有香＋
-        * （1月31日 15:00 ～ 2月10日 14:59）
-  * CO/COOL組
-    * 9秒
-      *  [涼風のミンストレル]梅木音葉＋
-        * （2016/6/30 15:00 〜 7/10 14:59）
-  * PA/PASSION組
-      * [ハッピーブライダル]ナターリア＋
-        * （2016/5/31 15:00〜6/9 14:59）
-      *        [人波のスイマー]西島櫂＋
-        *        プラチナガシャ(2017/2/21 15:00〜)
++ 常駔卡池的血盾
+  + CU/CUTE組
+    + 7秒
+      + [花園の春風]西園寺琴歌
+      + [シュガーリーボディ]榊原里美
+      + [華･美･雅]月宮雅
+    + 9秒
+      + [小悪魔お嬢様]涼宮星花＋
+      + （2017年3月31日 22:00 ～ 4月9日 14:59）＜期間限定アイドル＞
+      + [プリティパティシエ]中野有香＋
+      + （1月31日 15:00 ～ 2月10日 14:59）＜期間限定アイドル＞
+    + 11秒
+      + [リトルプリンセス]福山舞
+  + CO/COOL組
+    + 7秒
+      + [永遠のプリンセス]川島瑞樹
+    + 9秒
+      + [涼風のミンストレル]梅木音葉＋
+      + （2016/6/30 15:00 〜 7/10 14:59）＜期間限定アイドル＞
+    + 11秒
+      + [ブルーフロートパーティ]荒木比奈
+      + [美貌の麗女]東郷あい
+      + [ランウェイのカリスマ]桐生つかさ
+  + PA/PASSION組
+    + 7秒
+      + [きぐるみもふもふ]市原仁奈
+      + [ディアンドルガール]北川真尋
+    + 9秒     
+      + [ハッピーブライダル]ナターリア＋
+      + （2016/5/31 15:00〜6/9 14:59）＜期間限定アイドル＞
+      + [人波のスイマー]西島櫂＋
+      + プラチナガシャ(2017/2/21 15:00〜) 抽得到!!
+    + 11秒
+      + [サンフラワーイエロー]龍崎薫
+      + [みんなの太陽]上田鈴帆
       
+  
